--- a/WalletApp.Web/src/app/views/users/users.component.html
+++ b/WalletApp.Web/src/app/views/users/users.component.html
@@ -11,7 +11,7 @@
             </mat-toolbar>
         </div>
     </div>
-    <div class="row" style="display: flex;" *ngIf="blocs$ | async as item">
+    <div class="row" style="display: flex; justify-content: center;" *ngIf="blocs$ | async as item">
         <div class="col-6">
             <mat-card class="example-card">
                 <mat-card-header>
