--- a/WalletApp.Web/src/app/views/transactions/delete-transction-model/delete-transction-model.component.html
+++ b/WalletApp.Web/src/app/views/transactions/delete-transction-model/delete-transction-model.component.html
@@ -1,1 +1,5 @@
-<p>delete-transction-model works!</p>
+<h1 mat-dialog-title>Видалення!</h1>
+<div mat-dialog-actions>
+  <button mat-raised-button (click)="onNoClick()">Скасувати</button>
+  <button mat-raised-button color="warn" [mat-dialog-close]="data.isDelete" cdkFocusInitial>Видалити</button>
+</div>
