--- a/WalletApp.Web/src/app/views/transactions/transactions.component.html
+++ b/WalletApp.Web/src/app/views/transactions/transactions.component.html
@@ -53,7 +53,7 @@
                 <ng-container matColumnDef="detailTransaction">
                     <th mat-header-cell *matHeaderCellDef>Detail Transaction</th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-mini-fab color="primary"
+                        <button mat-mini-fab color="primary" (click)="opneDetailTransaction(element.id)"
                             style="margin: auto;"><mat-icon>keyboard_arrow_right</mat-icon>
                         </button>
                     </td>
